--- a/WEBSITE/authors.html
+++ b/WEBSITE/authors.html
@@ -1,5 +1,6 @@
 <html>
 <link href="css_files/style_sheets.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="scripts/hamburgerMenu.js"></script>
@@ -22,54 +23,84 @@
             </a>  
         </div>
     </div>
-    <img class="header" src="Images/home2.png" width="1920" height="100"/>
 </header>
+<br>
+<br>
     <body>
-    <div class="content">
-    
+	<!--<div class="pageHeader">-->
 	<h2>Authors</h2>
-	<div class="authorCentre">
-	<div class="author_header">
-	<img src="images/calum_header.png" alt="calum_image" class="centre">
-	</div>
-    
-	<h3>Calum McDonald</h3>
-	<div class="authorText">
-	<p>3rd Year Computing Student at Glasgow Caledonian University</p>
-	</div>
 	
-	<div class="author_header">
-	<img src="images/jason_header.png" alt="jason_image" class="centre">
-	</div>
-	<h3>Jason Wan</h3>
-	<div class="authorText">
-	<p>3rd Year ITMB Student at Glasgow Caledonian University</p>
-	</div>
 	
-	<div class="author_header"><img src="images/andrew_header.png" alt="andrew_image" class="centre"></div>
-	<h3>Andrew Hart</h3>
-	<div class="authorText">
-	<p>3rd Year Computing Student at Glasgow Caledonian University</p>
+<div class="container">
+  <div class="grid-row">
+  
+ <div class="grid-item">
+ 
+	<div class="card">
+  <img src="images/calum_header.png" alt="Avatar" style="width:100%">
+  <div class="container">
+    <h2><b>Calum McDonald</b></h2> 
+    <p>3rd Year Computing Student at Glasgow Caledonian University</p>
+	<div class="socialMediaIcons">
+	<a href="#" class="fa fa-facebook"></a>
+	<a href="#" class="fa fa-twitter"></a>
 	</div>
-	
-	<div class="author_header"><img src="images/ross_header.png" alt="ross_image" class="centre"></div>
-	<h3>Ross McGregor</h3>
-	<div class="authorText">
-	<p>3rd Year Computing Student at Glasgow Caledonian University</p>
-	</div>
-	
-	<div class="author_header"><img src="images/fraser_header.png" alt="fraser_image" class="centre"></div>
-	<h3>Fraser Watt</h3>
-	<div class="authorText">
-	<p>3rd Year Computing Student at Glasgow Caledonian University</p>
-	</div>
-	
-	<div class="author_header"><img src="images/kiera_header.png" alt="kiera_image" class="centre"></div>
-    <h3>Kiera Morrison</h3>
-	<div class="authorText">
-	<p>3rd Year Computing Student at Glasgow Caledonian University</p>
-	</div>
-    </div>
-	
+  </div>
+</div>
+</div>
+
+<div class="grid-item">
+<div class="card">
+  <img src="images/jason_header.png" alt="Avatar" style="width:100%">
+  <div class="container">
+    <h2><b>Jason Wan</b></h2> 
+    <p>3rd Year ITMB Student at Glasgow Caledonian University</p> 
+  </div>
+</div>
+</div>
+
+<div class="grid-item">
+<div class="card">
+  <img src="images/andrew_header.png" alt="Avatar" style="width:100%">
+  <div class="container">
+    <h2><b>Andrew Hart</b></h2> 
+    <p>3rd Year Computing Student at Glasgow Caledonian University</p>
+</div>
+</div>
+</div>
+
+<div class="grid-item">
+<div class="card">
+  <img src="images/ross_header.png" alt="Avatar" style="width:100%">
+  <div class="container">
+    <h2><b>Ross McGregor</b></h2> 
+    <p>3rd Year Computing Student at Glasgow Caledonian University</p> 
+  </div>
+</div>
+</div>
+
+<div class="grid-item">
+<div class="card">
+  <img src="images/fraser_header.png" alt="Avatar" style="width:100%">
+  <div class="container">
+    <h2><b>Fraser Watt</b></h2> 
+    <p>3rd Year Computing Student at Glasgow Caledonian University</p> 
+  </div>
+</div>
+</div>
+
+<div class="grid-item">
+<div class="card">
+  <img src="images/kiera_header.png" alt="Avatar" style="width:100%">
+  <div class="container">
+    <h2><b>Kiera Morrison</b></h2> 
+    <p>3rd Year Computing Student at Glasgow Caledonian University</p> 
+  </div>
+</div>
+</div>
+
+</div>
+</div>
+
     </body>
 </html>
