--- a/WEBSITE/earthquakes.html
+++ b/WEBSITE/earthquakes.html
@@ -1,5 +1,6 @@
 <html>
 <link href="css_files/style_sheets.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCtAqEPKCwtioxmtQeR5tac5DYAdSpTJM"></script>
@@ -10,7 +11,7 @@
     </head>
     <header>
     <div class="test">
-        <div class="topnav" id="myTopnav">
+        <div class="topnavEQ" id="myTopnav">
             <a href="index.html">Home</a>
             <a href="earthquakes.html">Earthquakes</a> 
             <a href="weather.html">Weather</a>
@@ -24,8 +25,10 @@
             </a>  
         </div>
     </div>
-    <img class="header" src="Images/earthquakeMaps.png" width="1920" height="100"/>
 </header>
+<br>
+<br>
+
     <body>
     <div class="buttonsEQ">
         <h2>Choose a time period</h2>
