--- a/WEBSITE/tornados.html
+++ b/WEBSITE/tornados.html
@@ -1,5 +1,6 @@
 <html>
 <link href="css_files/style_sheets.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <link href = "https://api.predicthq.com/v1/events/?label=wind/">
@@ -11,7 +12,7 @@
     <header>
 
         <div class="test">
-            <div class="topnav" id="myTopnav">
+            <div class="topNav" id="myTopnav">
                 <a href="index.html">Home</a>
                 <a href="earthquakes.html">Earthquakes</a> 
                 <a href="weather.html">Weather</a>
