--- a/WEBSITE/tutorial_earthquake.html
+++ b/WEBSITE/tutorial_earthquake.html
@@ -6,11 +6,11 @@
 
 <script src="scripts/hamburgerMenu.js"></script>
     <head>
-        <title>Earthquake Tutorial</title>
+        <title>Weather Tutorial</title>
     </head>
     <header>
     <div class="test">
-        <div class="topnavBlack" id="myTopnav">
+        <div class="topnavEQ" id="myTopnav">
             <a href="index.html">Home</a>
             <a href="earthquakes.html">Earthquakes</a> 
             <a href="weather.html">Weather</a>
@@ -24,13 +24,12 @@
             </a>  
         </div>
     </div>
-	<img class="header" src="Images/earthquakeMaps.png"/>
+	<img class="header" src="Images/weatherForcast.png"/>
 </header>
 
     <body>
-    <div class="content">
 	<h2>Earthquake Tutorial</h2>
-    <br>
+	<br>
 	<p>To recieve data about Earthquakes, we chose to use the same API that was used in the tutorials of the project starters. As by going through the tutorials with this API it meant we were already familiar with how the data is returned from the API. </p>
     <p>The API returns a JSON file and more information on the API can be see on the geoJSON <a href="tutorial_geojson.html">tutorial page</a> and there website can be found  <a href="https://earthquake.usgs.gov/earthquakes/feed/v1.0/geojson.php">here.</a></p>
     <p>Below is an example of data about an Earthquake, returned in a JSON format by the API.</p>
