--- a/WEBSITE/index.html
+++ b/WEBSITE/index.html
@@ -1,5 +1,6 @@
 <html>
 <link href="css_files/style_sheets.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="scripts/hamburgerMenu.js"></script>
@@ -24,7 +25,7 @@
             </a>  
         </div>
     </div>
-    <img class="header" src="Images/home2.png" width="1920" height="100"/>
+    <img class="header" src="Images/geomaps.png" width="1920" height="100"/>
 </header>
     <body>
     <div class="content">
