--- a/WEBSITE/tutorial_uv.html
+++ b/WEBSITE/tutorial_uv.html
@@ -13,7 +13,7 @@
 </head>
 <header>
     <div class="test">
-        <div class="topnavBlack" id="myTopnav">
+        <div class="topnavEQ" id="myTopnav">
             <a href="index.html">Home</a>
             <a href="earthquakes.html">Earthquakes</a> 
             <a href="weather.html">Weather</a>
