General Changes/debugging

--- a/WEBSITE/Flood.html
+++ b/WEBSITE/Flood.html
@@ -28,10 +28,12 @@
             </a>  
         </div>
     </div>
-        <img class="header" src="Images/floodsHeader.png"/>
+        
 </header>
+    <br>
+    <br>
     <body>
-    <!--<div class="content">-->
+    <div class="content">
 	
 		<p>
 		Flood Data is displayed in 5 different categories,<br>
@@ -55,6 +57,6 @@
 		<div id="PieGraph"></div>
 		
 		
-        <!--</div>-->
+        </div>
     </body>
 <html>
