--- a/WEBSITE/uvIndex.html
+++ b/WEBSITE/uvIndex.html
@@ -14,7 +14,7 @@
 </head>
 <header>
     <div class="test">
-        <div class="topnavEQ" id="myTopnav">
+        <div class="topnav" id="myTopnav">
             <a href="index.html">Home</a>
             <a href="earthquakes.html">Earthquakes</a> 
             <a href="weather.html">Weather</a>
@@ -36,7 +36,7 @@
             </a>  
         </div>
     </div>
-	<img class="header" src="Images/uvheader.png"/>
+	
 </header>
     <body>
     <div class="content">
