--- a/WEBSITE/weather.html
+++ b/WEBSITE/weather.html
@@ -11,7 +11,7 @@
     </head>
     <header>
     <div class="test">
-        <div class="topnavEQ" id="myTopnav">
+        <div class="topnav" id="myTopnav">
             <a href="index.html">Home</a>
             <a href="earthquakes.html">Earthquakes</a> 
             <a href="weather.html">Weather</a>
