--- a/WEBSITE/tornados.html
+++ b/WEBSITE/tornados.html
@@ -1,4 +1,6 @@
+<!DOCTYPE HTML>
 <html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="css_files/style_sheets.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -12,7 +14,7 @@
     <header>
 
         <div class="test">
-            <div class="topNav" id="myTopnav">
+            <div class="topnav" id="myTopnav">
                 <a href="index.html">Home</a>
                 <a href="earthquakes.html">Earthquakes</a> 
                 <a href="weather.html">Weather</a>
