--- a/WEBSITE/tutorial_weather.html
+++ b/WEBSITE/tutorial_weather.html
@@ -10,7 +10,7 @@
     </head>
     <header>
     <div class="test">
-        <div class="topnavEQ" id="myTopnav">
+        <div class="topnavBlack" id="myTopnav">
             <a href="index.html">Home</a>
             <a href="earthquakes.html">Earthquakes</a> 
             <a href="weather.html">Weather</a>
@@ -19,14 +19,6 @@
             <a href="">Plane Tracker</a>
             <a href="tornados.html">Tornados</a>
             <a href="authors.html">Authors</a>
-            <!-- <div class="dropDown">
-                <button class="navbtn">Tutorials</button>
-                <div class="dropdownOptions">
-                  <a href="#">Test</a>
-                  <a href="#">Test</a>
-                  <a href="#">Test</a>
-                </div>
-            </div>-->
             <a href="javascript:void(0);" class="icon" onclick="hamburgerMenu()">
             <i class="fa fa-bars"></i>
             </a>  
