--- a/WEBSITE/authors.html
+++ b/WEBSITE/authors.html
@@ -1,3 +1,5 @@
+<!DOCTYPE HTML>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <html>
 <link href="css_files/style_sheets.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
