JS Tutorial Page done maybe? Might add more

--- a/WEBSITE/tutorial_weather.html
+++ b/WEBSITE/tutorial_weather.html
@@ -4,13 +4,13 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA56O6IReihOpNjik9F3eTWVKwaR7WE9q4&callback=initMap"></script>
 
-<script src="scripts/hamburgerMenu.js"></script>
+<script src="scripts/hamburgerMenuB.js"></script>
     <head>
         <title>Weather Tutorial</title>
     </head>
     <header>
     <div class="test">
-        <div class="topnavBlack" id="myTopnav">
+        <div class="topnavBlack" id="myTopnavBlack">
             <a href="index.html">Home</a>
             <a href="earthquakes.html">Earthquakes</a> 
             <a href="weather.html">Weather</a>
