--- a/WEBSITE/tutorial_uv.html
+++ b/WEBSITE/tutorial_uv.html
@@ -3,7 +3,7 @@
 <link href="css_files/style_sheets.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="scripts/hamburgerMenu.js"></script>
+<script src="scripts/hamburgerMenuB.js"></script>
     
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
         
@@ -13,7 +13,7 @@
 </head>
 <header>
     <div class="test">
-        <div class="topnavBlack" id="myTopnav">
+        <div class="topnavBlack" id="myTopnavBlack">
             <a href="index.html">Home</a>
             <a href="earthquakes.html">Earthquakes</a> 
             <a href="weather.html">Weather</a>
